tests/language_tests/pass/0097_multiple_parameters_and_expression_arguments.ee
fn combine(left, right, extra) {
    return left + right + extra;
}

fn main() {
    print(combine(1 + 2, 3 * 4, 5));
}
