tests/language_tests/fail/0099_push_non_array.ee
fn main() {
    push(1, 2);
}
